--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -7,7 +7,7 @@
  <style>
      /* Links */
      a:hover {
-         color: #b6b84c;
+         color: #9381ff;
      }
 
      /* Header Buttons on Startpage */
@@ -21,16 +21,17 @@
 
      /* Scroll Menu on Startpage */
      a.fn-item.active {
-          color: #b6b84c;
+          color: #9381ff;
      }
      a.fn-item:hover {
-          color: #ced067;
+          color: #9381ff;
      }
 
      /* Content / Sections */
      .post-holder.odd {
-          background: #9aa3fb;
-          color: white;
+          /*background: #9aa3fb;*/
+          background:#CCCCFF;
+          color: #3A4145;
      }
      .post-holder {
           background: #f2efe8;
