--- a/themes/hugo-scroll/layouts/index.html
+++ b/themes/hugo-scroll/layouts/index.html
@@ -3,7 +3,9 @@
 {{ $sections := $headless.Resources.ByType "page" }}
 {{ $sections := cond .Site.BuildDrafts $sections (where $sections "Draft" "==" false) }}
 <header id="site-head" {{ with .Params.header_image }}style="background-image: url({{ . }})"{{ end }}>
-    <div style="width:100%;height:100%;background:linear-gradient(rgba(154,163,251,0.6),rgba(103,78,167,0.9));position:relative;display:table;">
+    <!--<div style="width:100%;height:100%;background:linear-gradient(rgba(154,163,251,0.6),rgba(103,78,167,0.9));position:relative;display:table;">-->
+        <!--<div style="width:100%;height:100%;background:linear-gradient(rgba(204,204,255,0.7),rgba(163,163,204,1));position:relative;display:table;">-->
+            <div style="width:100%;height:100%;background:linear-gradient(rgba(204,204,255,0.4),rgba(147,129,255,0.9));position:relative;display:table;">
         <div class="vertical">
             <div id="site-head-content" class="inner">
                 <h5><i>PeacefulParents.ca</i></h5>
