changing image paths

--- a/docs-old/css/screen.css
+++ b/docs-old/css/screen.css
@@ -562,13 +562,13 @@ ul li {
 }
 
 #quote1 {
-  background-image:url('https://peacefulparents.ca/images/forest.jpg');
+  background-image:url('images/forest.jpg');
   padding:50px;
   color:#fff;
 }
 
 #quote2 {
-  background-image:url('https://peacefulparents.ca/images/forest2.jpg');
+  background-image:url('images/forest2.jpg');
   background-position:center;
   padding:50px;
   color:#fff;
