--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -34,7 +34,7 @@
           color: #3A4145;
      }
      .post-holder {
-          background: #f2efe8;
+          background: #fff;
      }
      body {
           color: #3A4145;
